
5.1.0 -> 5.2a0:
    - jbj: install: retry callback reopen URI once to handle timeouts.
    - jbj: pkgio: use Fstat(2) for size check. more to do still ...
    - jbj: psm: fix: avoid lazy Stat(2) on active URI request.
    - jbj: rpmrpc: add Fstat(2) to map URI info into header statbuf early.
    - at: rpmbuild: check if the same files are packaged into a few sub-packages.
    - jbj: rpmwget: add --foodebug options, more wget-style spewage.
    - jbj: rpmdav: capture connection state transitions w wget-style spewage.
    - jbj: rpmdav: add global rpmioHttpConnectTimeoutSecs (unused) for now.
    - jbj: rpmdav: run OPTIONS once, repeat for every directory, through a URI.
    - jbj: rpmdav: add global rpmioHttp{Accept,ReadTimeoutSecs,UserAgent} for now.
    - jbj: rpmwget: wire up --spider to Stat(2) running HEAD.
    - rpm.org: single point to control how callbacks are made.
    - rpm.org: Don't leak memory on python expandMacro().
    - jbj: rpmgpg: stub in gpg options using popt.
    - rpm.org: get/set transaction keyring methods.
    - jbj: rpmio: add rpmkeyring API.
    - rpm.org: swipe the abstract keyring API.
    - jbj: rpmio: add Content-Disposition: handling (for rpmwget eventually).
    - jbj: rpmwget: rework logic to avoid Stat(2) running HEAD.
    - jbj: rpmio: set st_blksize = 2048 iff html with Stat(http://) 
    - jbj: rpmio: add Content-Type/Last-Modified to FD_t.
    - jbj: rpmwget: wire up -i,--input-file URI manifests.
    - jbj: rpmwget: handle lower/UPPER ofn transforms, stub in retry logic.
    - jbj: rpmwget: stub in a minimal (but functional) URI copy.
    - jbj: rpmwget: refactor options into a static structure.
    - jbj: fix: specspo lookup broke because of 2nd tagName call side-effect.
    - jbj: rpmwget: parse all wget options.
    - jbj: rpmio: stub in rpmwget options using popt.
    - jbj: rpmio: stub in rpmcurl options using popt.
    - jbj: rpmio: delete rpmrepo/rpmmtree, they live in tools/ now.
    - jbj: rpmz: fix some typos.